# pyraf-interpreter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: closure.raf  demo.raf  fizzbuzz.raf  import_demo.raf  mandelbrot_ascii.raf
examples/lib/: math.raf
pyraf/: ast.py  bytecode.py  cli.py  compiler.py  errors.py  interpreter.py  lexer.py  parser.py  runtime.py  tokens.py  vm.py
pyraf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_eval.py  test_imports.py  test_lexer.py  test_vm.py
