[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyraf"
version = "0.1.0"
description = "PyRaf — a Python-inspired interpreter with lexer, parser, AST, and REPL."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = []

[project.scripts]
pyraf = "pyraf.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
